Deleted CSS and made two sections
i have deleted what was in my CSS and made two sections added to my website

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
 </head>
 <body>
 	<div class="about-me">
-		<h1>About Me</h1>
-		<div class="rap">
-			  - 50.times do
-    .wtf
+		<h1>Giselle Noriega</h1>
 		</div>
-	</div>
+	<section class="section">
+		<p>About Me</p>
+	</section>
+	<section class="section2">
+		hello
+	</section>
 </body>
 </html>
