added gif and borders and text
I added a gif to my first page and borders and some text inside the borders

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Exo+2' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
 	<title></title>
 </head>
-<body>
+<body class="body">
 	<div class="about-me">
 		<h1>Giselle Noriega</h1>
 		</div>
@@ -13,7 +16,9 @@
 		<p>About Me</p>
 	</section>
 	<section class="section2">
-		hello
+		<img src="animated-gif-music.gif" height="280px" width="900px" align="center">
+		<p class="section2"> I am an APP Academy student at Pasadena High School and this is my website. </p>
+		<p id="enjoy"> Enjoy! </p>
 	</section>
 </body>
 </html>
