--- a/index.html
+++ b/index.html
@@ -6,19 +6,23 @@
 	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Exo+2' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
-	<title></title>
+	<title>Giselle Noriega</title>
 </head>
 <body class="body">
 	<div class="about-me">
 		<h1>Giselle Noriega</h1>
 		</div>
 	<section class="section">
-		<p>About Me</p>
-	</section>
-	<section class="section2">
 		<img src="animated-gif-music.gif" height="280px" width="900px" align="center">
 		<p class="section2"> I am an APP Academy student at Pasadena High School and this is my website. </p>
 		<p id="enjoy"> Enjoy! </p>
 	</section>
+	<section class="second">
+		<a href="secondpage.html">About Me</li>
+	</section>
+	<audio controls autoplay class="audio">
+  		<source src="C:\Users\Student\Desktop\project 1\audio\letsgo.ogg" type="audio/ogg">
+  		<source src="C:\Users\Student\Desktop\project 1\audio\letsgo.mp3" type="audio/mpeg">
+		</audio>
 </body>
 </html>
