--- a/secondpage.html
+++ b/secondpage.html
@@ -9,8 +9,8 @@
 <body class="body2">
 	<div class="aboutme">
 		<h1>About Me</h1>
-		</div>
-<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+	
+	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
@@ -21,17 +21,11 @@
   <!-- Wrapper for slides -->
   <div class="carousel-inner">
     <div class="item active">
-      <img src="cousins.jpg" alt="...">
+      <img src="cousins.jpg" alt="My Cousins">
     </div>
     <div class="item">
-      <img src="dad family.jpg" alt="...">
-      <div class="carousel-caption">
-        ...
-      </div>
-    </div>
-    ...
-  </div>
-
+      <img src="dadfamily.jpg" alt="Dad's Family">
+     </div>
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
@@ -40,5 +34,8 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 </body>
 </html>
