added more pictures to carousel and added a third webpage
i added more pictures to carousel and i have added a third webpage

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE <!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -19,6 +19,9 @@
 	</section>
 	<section class="second">
 		<a href="secondpage.html">About Me</li>
+	</section>
+	<section class="third">
+		<a href="thirdpage.html">Contact</li>
 	</section>
 	<audio controls autoplay class="audio">
   		<source src="C:\Users\Student\Desktop\project 1\audio\letsgo.ogg" type="audio/ogg">
