--- a/secondpage.html
+++ b/secondpage.html
@@ -4,12 +4,23 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Exo+2' rel='stylesheet' type='text/css'>
 	<title>About Me</title>
 </head>
 <body class="body2">
 	<div class="aboutme">
 		<h1>About Me</h1>
-	
+    <section class="second">
+      <a href="index.html">Home</li>
+    </section>
+    <section class="second">
+      <a href="secondpage.html">About Me</li>
+    </section>
+    <section class="second">
+      <a href="thirdpage.html">Contact</li>
+    </section>
+	</div>
+
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
@@ -26,6 +37,41 @@
     <div class="item">
       <img src="dadfamily.jpg" alt="Dad's Family">
      </div>
+     <div class="item">
+      <img src="family.jpg" alt="Family">
+     </div>
+     <div class="item">
+      <img src="familia.jpg" alt="Family">
+     </div>
+     <div class="item">
+      <img src="fambam.jpg" alt="Family">
+     </div>
+     <div class="item">
+      <img src="kids.jpg" alt="Family">
+     </div>
+     <div class="item">
+      <img src="laughlin.jpg" alt="Family">
+     </div>
+     <div class="item">
+      <img src="picturee.jpg" alt="Family">
+     </div>
+     <div class="item">
+      <img src="gloria.jpg" alt="Family">
+     </div>
+     <div class="item">
+      <img src="girls.jpg" alt="Family">
+     </div>
+     <div class="item">
+      <img src="universal.jpg" alt="Family">
+     </div>
+  </div>
+  <div>
+  <section class="paragraph">
+    <p>My name is Giselle Noriega. I attend to Pasadena High School, Home of the Bulldogs, and I am 15 years old.</p>
+    <p>My hobbies are traveling, reading, CODING, and just having fun.</p>
+  </section>
+  </div>
+
   <!-- Controls -->
   <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
     <span class="glyphicon glyphicon-chevron-left"></span>
@@ -34,6 +80,8 @@
     <span class="glyphicon glyphicon-chevron-right"></span>
   </a>
 </div>
+
+
 
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
