added a third page but could not link my social media
i have finished adding my third page but i could not link my facebook and/or any other social media becuase i am blocked

--- a/secondpage.html
+++ b/secondpage.html
@@ -10,13 +10,13 @@
 <body class="body2">
 	<div class="aboutme">
 		<h1>About Me</h1>
-    <section class="second">
+    <section class="third">
       <a href="index.html">Home</li>
     </section>
-    <section class="second">
+    <section class="third">
       <a href="secondpage.html">About Me</li>
     </section>
-    <section class="second">
+    <section class="third">
       <a href="thirdpage.html">Contact</li>
     </section>
 	</div>
@@ -41,7 +41,7 @@
       <img src="family.jpg" alt="Family">
      </div>
      <div class="item">
-      <img src="familia.jpg" alt="Family">
+      <img src="Napoleon_dance.gif" alt="Family">
      </div>
      <div class="item">
       <img src="fambam.jpg" alt="Family">
@@ -65,10 +65,13 @@
       <img src="universal.jpg" alt="Family">
      </div>
   </div>
-  <div>
-  <section class="paragraph">
+  <div class="paragraph">
+  <section>
     <p>My name is Giselle Noriega. I attend to Pasadena High School, Home of the Bulldogs, and I am 15 years old.</p>
-    <p>My hobbies are traveling, reading, CODING, and just having fun.</p>
+    <p>My hobbies are traveling, reading, dancing, and just having fun. I love to have fun with my family and spend time with them.</p>
+    <p>I also love going on vacation. I've been to Nevada, New Mexico, Oregon, and so much more.</p>
+    <p>I have been to many family reunions and celebrations. They were always fun and exciting. I love my family more than anything</p>
+    <p>They mean the world to me. I'm also a bit of a bookworm when it comes to literature. I always love a good book.</p>
   </section>
   </div>
 
