--- a/thirdpage.html
+++ b/thirdpage.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE <!DOCTYPE html>
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
@@ -6,17 +6,12 @@
 	<link href='http://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Exo+2' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Lily+Script+One' rel='stylesheet' type='text/css'>
-	<title>Giselle Noriega</title>
+	<title>Contact</title>
 </head>
 <body class="body">
 	<div class="home">
-		<h1>Giselle Noriega</h1>
+		<h1>Contact</h1>
 		</div>
-	<section class="section">
-		<img src="animated-gif-music.gif" height="280px" width="900px" align="center">
-		<p class="section2"> I am an APP Academy student at Pasadena High School and this is my website. </p>
-		<p id="enjoy"> Enjoy! </p>
-	</section>
 	<section class="second">
 		<a href="index.html">Home</li>
 	</section>
@@ -26,9 +21,5 @@
 	<section class="second">
 		<a href="thirdpage.html">Contact</li>
 	</section>
-	<audio controls autoplay class="audio">
-  		<source src="C:\Users\Student\Desktop\project 1\audio\letsgo.ogg" type="audio/ogg">
-  		<source src="C:\Users\Student\Desktop\project 1\audio\letsgo.mp3" type="audio/mpeg">
-		</audio>
 </body>
 </html>
